--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
         <h1>અમારો સ્ટાફ</h1>
         <div class="staff-info">
             <div class="members">
-                <span class="span-text">આચાર્ય</span>
+                <span class="teacher-txt">આચાર્ય</span>
                 <div class="img-container">
                     <img src="img/pcp.jpeg" alt="Principal">
                 </div>
                 <div class="principal-info">
-                    <h2 class="span-text">માંગરોલીયા સાહેબ</h2>
+                    <h2 class="teacher-txt">માંગરોલીયા સાહેબ</h2>
                     <p>અનુભવ: 24 વર્ષ</p>
                     <p>ડિગ્રી: B.Sc. ,B.Ed.</p>
                     <p>વિષય: ગણિત, વિજ્ઞાન</p>
@@ -141,12 +141,12 @@
             </div>
             <hr>
             <div class="members">
-                <span class="span-text">શિક્ષક</span>
+                <span class="teacher-txt">શિક્ષક</span>
                 <div class="img-container">
                     <img src="img/fa1.jpeg" alt="Principal">
                 </div>
                 <div class="principal-info">
-                    <h3 class="span-text">ગઢવી સાહેબ</h3>
+                    <h3 class="teacher-txt">ગઢવી સાહેબ</h3>
                     <p>અનુભવ: 26 વર્ષ</p>
                     <p>ડિગ્રી: B.A. , B.Ed. ,M.Ed.</p>
                     <p>વિષય: અંગ્રેજી, સામાજિક વિજ્ઞાન</p>
@@ -160,12 +160,12 @@
             </div>
             <hr>
             <div class="members">
-                <span class="span-text">શિક્ષક</span>
+                <span class="teacher-txt">શિક્ષક</span>
                 <div class="img-container">
                     <img src="img/fa2.jpeg" alt="Principal">
                 </div>
                 <div class="principal-info">
-                    <h3 class="span-text">જોશી સાહેબ</h3>
+                    <h3 class="teacher-txt">જોશી સાહેબ</h3>
                     <p>અનુભવ: 24 વર્ષ</p>
                     <p>ડિગ્રી: M.A ,B.Ed.</p>
                     <p>વિષય: ગુજરાતી, સંસ્કૃત</p>
@@ -181,12 +181,12 @@
 
             <hr>
             <div class="members">
-                <span class="span-text">શિક્ષક</span>
+                <span class="teacher-txt">શિક્ષક</span>
                 <div class="img-container">
                     <img src="img/fa3.jpeg" alt="Principal">
                 </div>
                 <div class="principal-info">
-                    <h2 class="span-text">સાકરીયા સાહેબ</h2>
+                    <h2 class="teacher-txt">સાકરીયા સાહેબ</h2>
                     <p>અનુભવ: 6 વર્ષ</p>
                     <p>ડિગ્રી: M.Sc. ,B.Ed.</p>
                     <p>વિષય: ગણિત, વિજ્ઞાન</p>
