--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#Staff">અમારા શિક્ષક સ્ટાફ</a>
                 </li>
                 <li>
-                    <a href="https://hrg-cms-1.vercel.app/">શાળાનું પરિણામ</a>
+                    <button class="button-19" role="button" onclick="window.location.href='https://hrg-cms-1.vercel.app/'">શાળાનું પરિણામ</button>
                 </li>
                 <li>
                     <a href="#Academic">શૈક્ષણિક વિગતો</a>
@@ -223,11 +223,13 @@
                     મેદાન, યુવા ઉર્જા અને અમર્યાદ કલ્પનાનું જીવંત કેન્દ્ર યુવાન હૃદય વિશ્વમાં તેમનું સ્થાન મેળવે છે</p>
             </div>
             <div class="education-level custom-card">
-                <h3>શાળાનું પરિણામ</h3>
+                <button class="button-19" role="button" onclick="window.location.href='https://hrg-cms-1.vercel.app/'">શાળાનું પરિણામ</button>
                 <p>ધોરણ 10 ગુજરાત બોર્ડ</p>
                 <p>નવી ક્ષિતિજો પર વિજય મેળવવા અને વિશ્વને તેમની તેજસ્વીતાથી પ્રકાશિત કરવા માટે તૈયાર છે. તેમની સફળતા
                     અમારા શિક્ષકોના સમર્પણ અને અમારા સમુદાયના અવિશ્વસનીય સમર્થનનો પુરાવો છે. તેઓ આ દિવાલોની અંદર શીખેલા
-                    પાઠ દ્વારા સશક્ત બનીને સતત આવનારી પેઢીઓને પ્રેરણા આપે છે</p>
+                    પાઠ દ્વારા સશક્ત બનીને સતત આવનારી પેઢીઓને પ્રેરણા આપે છે
+                    
+                </p>
             </div>
 
         </div>
@@ -274,7 +276,7 @@
             </li>
             <li>
                 <figure class="grid__figure">
-                    <a href="https://hrg-cms-1.vercel.app/post/march2023-1">
+                    <a href="https://hrg-cms-1.vercel.app/post/m2023schoolresult">
                         <img src="img/m23.jpeg" alt="">
                         <figcaption>ગુજરાત બોર્ડ માર્ચ 2023નું પરિણામ</figcaption>
                     </a>
