final commit new final

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#Staff">અમારા શિક્ષક સ્ટાફ</a>
                 </li>
                 <li>
-                    <button class="button-19" role="button" onclick="window.location.href='https://hrg-cms-1.vercel.app/'">શાળાનું પરિણામ</button>
+                    <button class="button-19" role="button" onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
                 </li>
                 <li>
                     <a href="#Academic">શૈક્ષણિક વિગતો</a>
@@ -223,7 +223,7 @@
                     મેદાન, યુવા ઉર્જા અને અમર્યાદ કલ્પનાનું જીવંત કેન્દ્ર યુવાન હૃદય વિશ્વમાં તેમનું સ્થાન મેળવે છે</p>
             </div>
             <div class="education-level custom-card">
-                <button class="button-19" role="button" onclick="window.location.href='https://hrg-cms-1.vercel.app/'">શાળાનું પરિણામ</button>
+                <button class="button-19" role="button" onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
                 <p>ધોરણ 10 ગુજરાત બોર્ડ</p>
                 <p>નવી ક્ષિતિજો પર વિજય મેળવવા અને વિશ્વને તેમની તેજસ્વીતાથી પ્રકાશિત કરવા માટે તૈયાર છે. તેમની સફળતા
                     અમારા શિક્ષકોના સમર્પણ અને અમારા સમુદાયના અવિશ્વસનીય સમર્થનનો પુરાવો છે. તેઓ આ દિવાલોની અંદર શીખેલા
@@ -276,7 +276,7 @@
             </li>
             <li>
                 <figure class="grid__figure">
-                    <a href="https://hrg-cms-1.vercel.app/post/m2023schoolresult">
+                    <a href="https://hrgardi-result.vercel.app/post/m2023result">
                         <img src="img/m23.jpeg" alt="">
                         <figcaption>ગુજરાત બોર્ડ માર્ચ 2023નું પરિણામ</figcaption>
                     </a>
@@ -297,7 +297,7 @@
                 <a href="tel:+1234567890">+1234567890</a>
             </div>
             <div class="contact-item">
-                <a href="https://hrg-cms-1.vercel.app/"><i class="fas fa-globe"></i></a>
+                <a href="https://hrgardi-result.vercel.app/"><i class="fas fa-globe"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a
                     href="https://www.google.com/maps/place/High+School+Moti+Khilori/@21.804062,70.98023,409m/data=!3m1!1e3!4m6!3m5!1s0x39586964b7a30ae5:0x87ed3c757b530832!8m2!3d21.8040619!4d70.9802302!16s%2Fg%2F11hdsqz_83?hl=en&entry=ttu"><i
@@ -328,7 +328,7 @@
                 <div class="footer-col">
                     <h4>અમને અનુસરો</h4>
                     <div class="social-links">
-                        <a href="https://hrg-cms-1.vercel.app/"><i class="fas fa-globe"></i></a>
+                        <a href="https://hrgardi-result.vercel.app/"><i class="fas fa-globe"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a
                             href="https://www.google.com/maps/place/High+School+Moti+Khilori/@21.804062,70.98023,409m/data=!3m1!1e3!4m6!3m5!1s0x39586964b7a30ae5:0x87ed3c757b530832!8m2!3d21.8040619!4d70.9802302!16s%2Fg%2F11hdsqz_83?hl=en&entry=ttu"><i
