--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <a href="#Staff">અમારા શિક્ષક સ્ટાફ</a>
                 </li>
                 <li>
-                    <button class="button-19" role="button" onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
+                    <button class="button-19" role="button"
+                        onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
                 </li>
                 <li>
                     <a href="#Academic">શૈક્ષણિક વિગતો</a>
@@ -53,6 +54,14 @@
             </ul>
         </nav>
     </header>
+
+    <section class="new-result marquee-line">
+        <marquee class="marquee-line">This is a basic scrolling text.</marquee>
+        <button class="button-19" role="button"
+            onclick="window.location.href='https://hrgardi-result.vercel.app/post/m2024result'">માર્ચ 2024નું પરિણામ</button>
+ 
+    </section>
+
 
     <section id="#" class="hero">
         <div class="slide-bg ">
@@ -223,12 +232,13 @@
                     મેદાન, યુવા ઉર્જા અને અમર્યાદ કલ્પનાનું જીવંત કેન્દ્ર યુવાન હૃદય વિશ્વમાં તેમનું સ્થાન મેળવે છે</p>
             </div>
             <div class="education-level custom-card">
-                <button class="button-19" role="button" onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
+                <button class="button-19" role="button"
+                    onclick="window.location.href='https://hrgardi-result.vercel.app/'">શાળાનું પરિણામ</button>
                 <p>ધોરણ 10 ગુજરાત બોર્ડ</p>
                 <p>નવી ક્ષિતિજો પર વિજય મેળવવા અને વિશ્વને તેમની તેજસ્વીતાથી પ્રકાશિત કરવા માટે તૈયાર છે. તેમની સફળતા
                     અમારા શિક્ષકોના સમર્પણ અને અમારા સમુદાયના અવિશ્વસનીય સમર્થનનો પુરાવો છે. તેઓ આ દિવાલોની અંદર શીખેલા
                     પાઠ દ્વારા સશક્ત બનીને સતત આવનારી પેઢીઓને પ્રેરણા આપે છે
-                    
+
                 </p>
             </div>
 
