--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="new-result marquee-line">
         <marquee class="marquee-line">This is a basic scrolling text.</marquee>
         <button class="button-19" role="button"
-            onclick="window.location.href='https://hrgardi-result.vercel.app/post/m2024result'">માર્ચ 2024નું પરિણામ</button>
+            onclick="window.location.href='https://hrgardi-result.vercel.app/post/m2024result/'">માર્ચ 2024નું પરિણામ</button>
  
     </section>
 
