--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
             <div class="members">
                 <span class="teacher-txt">શિક્ષક</span>
                 <div class="img-container">
-                    <img src="img/fa3.jpeg" alt="Principal">
+                    <img src="img/fa5.jpeg" alt="Principal">
                 </div>
                 <div class="principal-info">
-                    <h2 class="teacher-txt">સાકરીયા સાહેબ</h2>
-                    <p>અનુભવ: 6 વર્ષ</p>
-                    <p>ડિગ્રી: M.Sc. ,B.Ed.</p>
+                    <h2 class="teacher-txt">પલકબેન દેસાઈ</h2>
+                    <p>અનુભવ: 2 વર્ષ</p>
+                    <p>ડિગ્રી: M.Sc. ,M.Ed.</p>
                     <p>વિષય: ગણિત, વિજ્ઞાન</p>
-                    <p>6 વર્ષથી વધુ શિક્ષણના મજબૂત પાયા સાથે, મારું ધ્યાન ગણિતના ક્ષેત્રમાં છે. હું મારા વિદ્યાર્થીઓમાં
+                    <p>2 વર્ષથી વધુ શિક્ષણના મજબૂત પાયા સાથે, મારું ધ્યાન ગણિતના ક્ષેત્રમાં છે. હું મારા વિદ્યાર્થીઓમાં
                         ગાણિતિક વિભાવનાઓની ઊંડી સમજણ અને સમસ્યા હલ કરવાની કુશળતાને પ્રોત્સાહન આપવા માટે સમર્પિત છું.
                         આકર્ષક પાઠ અને વ્યક્તિગત સમર્થન દ્વારા, હું દરેક વ્યક્તિમાં આત્મવિશ્વાસ અને શીખવાની ઉત્કટતા
                         કેળવવાનો પ્રયત્ન કરું છું. દરેક વિદ્યાર્થીની સંભવિતતાને અનલૉક કરવા માટે પ્રતિબદ્ધ, હું ગણિત
